kubernetes/apps/network/external/gateways/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "619cbf72-7e75-4a91-a58f-17ee6c364e26.cfargotunnel.com"
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.${SECRET_DOMAIN}"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: cftollefsen-com-production-tls
        namespace: cert-manager
        kind: Secret
  addresses:
    - type: IPAddress
      value: "10.0.30.60"  # Same IP as your external ingress-nginx
